provisioning/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashboard
        app.kubernetes.io/component: web
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k8s.scaleway.com/purpose
                    operator: In
                    values:
                      - web
      containers:
        - name: dashboard
          image: "image"
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
              name: "http"

      imagePullSecrets:
        - name: registry-secret

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-web-service
  labels:
    app.kubernetes.io/name: dashboard-web-service
    app.kubernetes.io/component: web

spec:
  selector:
    app.kubernetes.io/name: dashboard
  ports:
    - port: 9090
      targetPort: "http"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
# N.B the server deployment yaml depends on this name
metadata:
  name: dashboard-web
  labels:
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/component: web
spec:
  rules:
    - host: "hostname"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-web-service
                port:
                  number: 9090
